tests/fixtures/invalid/pow_list_bytes_list.py
# Cannot call pow() with List[int], Bytes, List[int]
x = pow([1, 2, 3], b"hello", [1, 2, 3])
